--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "bootstrap": "^4.5.3",
     "react": "^16.13.1",
     "react-bootstrap": "^1.4.0",
+    "react-charts": "^2.0.0-beta.7",
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "react-vis": "^1.11.7"
   },
   "scripts": {
     "start": "react-scripts start",
