--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.5.3",
+    "mongoose": "^5.11.8",
     "react": "^16.13.1",
     "react-bootstrap": "^1.4.0",
     "react-charts": "^2.0.0-beta.7",
